@@ -70,6 +70,9 @@ Sandbox_EN = {
 	Sandbox_MoreTraitsDynamic_MotionSickenss = "Motion Sickness*",
 	Sandbox_MoreTraitsDynamic_MotionSickenssSkill = "Motion Sickness Driving Skill Requirement",
 	Sandbox_MoreTraitsDynamic_MotionSickenss_tooltip = "Requires driving skill mod, otherwise always static",
+	Sandbox_MoreTraitsDynamic_Mundane = "Mundane",
+	Sandbox_MoreTraitsDynamic_MundaneDamage = "Motion Sickness Driving Skill Requirement",
+	Sandbox_MoreTraitsDynamic_MundaneDamage_tooltip = "Amount of damage you need to deal to lose the trait",
 	Sandbox_MoreTraitsDynamic_NaturalEater = "Natural Eater",
 	Sandbox_MoreTraitsDynamic_NaturalEaterForaging = "Natural Eater Foraging Skill Requirement",
 	Sandbox_MoreTraitsDynamic_NaturalEaterCooking = "Natural Eater Cooking Skill Requirement",
@@ -86,8 +89,6 @@ Sandbox_EN = {
 	Sandbox_MoreTraitsDynamic_Paranoia = "Paranoia",
 	Sandbox_MoreTraitsDynamic_ParanoiaHoursLose = "Paranoia Lose Hours requirement",
 	Sandbox_MoreTraitsDynamic_ParanoiaHoursLose_tooltip = "How many hours you need to be panicked and stressed (at same time) above average to get rid of trait",
-	Sandbox_MoreTraitsDynamic_ParanoiaHoursGain = "Paranoia Gain Hours requirement",
-	Sandbox_MoreTraitsDynamic_ParanoiaHoursGain_tooltip = "How many hours you need to be panicked and stressed (at same time) above average to get Paranoia. Amount of hours you have stacked is slowly decaying.",
 	Sandbox_MoreTraitsDynamic_PracticedSwordsman = "Practiced Swordsman",
 	Sandbox_MoreTraitsDynamic_PracticedSwordsmanSkill = "Practiced Swordsman Skill Requirement",
 	Sandbox_MoreTraitsDynamic_PracticedSwordsmanSkill_tooltip = "Long Blade + Short Blade",
